Revision history for Test-HTTP-Server

{{$NEXT}}

0.4.0  2019-03-08T11:40:31Z
   - Removed META.json test for now. Issues with building the module.
   - Fixed version of HTTP::Server::Async to use correctly. 

0.3.2  2019-03-04T12:34:33Z
   - Move from use v6.c to use v6
   - Added META.json test

0.3.1  2019-02-28T15:09:17Z
   - Force updated version of HTTP::Server::Async post HTTP::Server removal.

0.3.0  2018-08-14T20:30:24+01:00
   - Added xml MIME type
   - Added initial config.yml file with basic rules.

0.2.1  2018-08-07T10:42:42+01:00
   - Added additional MIME types, html, png, jpg, gif, js, css and json

0.2.0  2018-08-05T12:59:52+01:00
   - General fixes to use 127.0.0.1 