@@ -1,6 +1,8 @@
 Revision history for Test-HTTP-Server
 
 {{$NEXT}}
+   - Moved to a Docker based Travis test
+   - Added "loop" as an option for the "returns" section in the config file to allow a url to loop through it's responses. 
 
 0.4.0  2019-03-08T11:40:31Z
    - Removed META.json test for now. Issues with building the module.
